lnet/klnds/o2iblnd/o2iblnd_modparams.c
@@ -266,6 +266,9 @@ kiblnd_tunables_setup(struct lnet_ni *ni)
 		net_tunables->lct_peer_tx_credits =
 			net_tunables->lct_max_tx_credits;
 
+	if (tunables->lnd_map_on_demand == UINT_MAX)
+		tunables->lnd_map_on_demand = map_on_demand;
+
 #ifndef HAVE_IB_GET_DMA_MR
 	/*
 	 * For kernels which do not support global memory regions, always
